--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "autoprefixer": "^10.4.14",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
-    "pretier": "^0.0.1"
+    "postcss": "^8.4.21",
+    "pretier": "^0.0.1",
+    "tailwindcss": "^3.3.0"
   }
 }
