--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "aws-amplify": "^5.0.22",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
